--- a/smartcontactmanager/src/main/resources/application-prod.properties
+++ b/smartcontactmanager/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/contactmanager?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://containers-us-west-99.railway.app:7735/railway?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=DB_Root@99
+spring.datasource.password=Vg19lG8qYmzBye8UGlcA
 
 #jpa configuraton
 
