SCM-UPDATED USER DELETE ACCOUNT MODULE

--- a/smartcontactmanager/src/main/resources/application-dev.properties
+++ b/smartcontactmanager/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ spring.datasource.password=DB_Root@99
 #jpa configuraton
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 
 spring.servlet.multipart.max-file-size=10MB
