--- a/smartcontactmanager/src/main/resources/application-prod.properties
+++ b/smartcontactmanager/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://containers-us-west-99.railway.app:7735/railwa
 spring.datasource.username=root
 spring.datasource.password=Vg19lG8qYmzBye8UGlcA
 
-#jpa configuraton
+#jpa configuration
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
