--- a/smartcontactmanager/src/main/resources/application-prod.properties
+++ b/smartcontactmanager/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://containers-us-west-99.railway.app:7735/railway?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:40182/railway?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Vg19lG8qYmzBye8UGlcA
+spring.datasource.password=1gc2H1Ehg2hF3EFD65Fee6H43DH15cch
 
 #jpa configuration
 
